--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@ body {
     background-color: #D9D9D9;
 }
 
-h1,
+a {
+    background-color: HEX #535252 rgb(83, 82, 82) text-color HEX #f2f2f2 rgb(242, 242, 242)
+}
+
+h1 {
+    background-color: HEX #8e8c8c rgb(142, 140, 140) text-color HEX #000000 rgb(0, 0, 0)
+}
+
 h2,
 h3 {
     font-family: 'Michroma', sans-serif;
@@ -81,7 +88,7 @@ footer {
 .active {
     background-color: #aaa;
     color: white;
-    background-image: url(istockphoto-1348203336-612x612.jpeg);
+    background-image: url(bamboo-forest-tree-grove\ \(1\)\ \(1\).webp);
 }
 
 .topnav .icon {
